# recreate

./: .gitignore  .npmrc  BEHAVIOR_FIDELITY_PLAN.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build-react.mjs  build-static.mjs  package-lock.json  package.json  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
browser/: Cargo.toml
browser/src/: cdp.rs  endpoint.rs  executable.rs  lib.rs
docs/: reference.md  release-channels.md
fixtures/: access-server.mjs
npm/: check-package.mjs  cli.mjs  cli.test.mjs
oracle/: Cargo.toml  README.md
oracle/fixtures/: corpus.json  equivalent.html  mutations.json  soak-equivalent.html  soak-source.html  source.html
oracle/fixtures/mutants/: async.html  motion.html  network.html  observer.html  paint.html  responsive.html  structure.html
oracle/holdouts/: mutations.json
oracle/holdouts/mutants/: paint-only.html
oracle/interaction-fixtures/: equivalent.html
oracle/src/: artifact.rs  benchmark.rs  browser.rs  browser_factory.rs  browser_target.rs  cdp.rs  checkpoint.rs  cli.rs  collector.rs  collector_browser.rs  collector_state.rs  collector_steps.rs  compare.rs  compare_difference.rs  digest.rs  discovery.rs  discovery_graph.rs  discovery_interactions.rs  discovery_obligations.rs  engine.rs  engine_support.rs  holdout.rs  lib.rs  main.rs  model.rs  network.rs  probe.rs  probe_discovery.rs  process_job.rs  qualification.rs  qualification_server.rs  replay.rs  report.rs  scenario.rs  snapshot_transfer.rs  source_self.rs  trace_qualification.rs
oracle/tests/: architecture.rs  faults.rs  interaction_fidelity.rs
runtime/: anchor.mjs  carousel.mjs  interaction.mjs  sequence.mjs  textarea.mjs
scripts/: set-beta-version.mjs
src/: acceptance-matrix.mjs  access-detection.mjs  access-resume.mjs  agent-components.mjs  agent-readiness.mjs  agent-style.mjs  asset_script.rs  attribute_sequence_script.rs  behavior.rs  behavior_tests.rs  browser.rs  capture-compaction.mjs  capture.rs  capture_startup.rs  capture_startup_tests.rs  cdp.rs  cli-arguments.mjs  cli.mjs  cli.rs  compare-native-state.mjs  compare.rs  compare_animation.rs  compare_capture.rs  compare_css_value.rs  compare_dom.rs  compare_node.rs  compare_tests.rs  destination-contract.mjs  drag-probe.mjs  drag-runtime.mjs  evidence-filter.mjs  extract.mjs  (+59 more)
(+123 files in other folders)
