[package]
name = "recreate-browser"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time"] }
tokio-tungstenite = "0.28"
url = "2"
