[package]
name = "recreate-oracle"
version = "0.1.0"
edition = "2024"
description = "Independent browser-authoritative fidelity oracle for Recreate"
license = "MIT"
repository = "https://github.com/czearing/recreate"

[[bin]]
name = "recreate-oracle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
recreate-browser = { path = "../browser" }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.28"
url = "2"
zune-png = "0.5"

[dev-dependencies]
proptest = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading"
] }
